Add console driver
The driver implements synchronous printing, and the `fmt::Write` trait.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ debug = true
 exclude = ["tock"]
 members = [
     "apis/buttons",
+    "apis/console",
     "apis/leds",
     "apis/low_level_debug",
     "libtock2",
