--- a/apis/console/Cargo.toml
+++ b/apis/console/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "libtock_low_level_debug"
+name = "libtock_console"
 version = "0.1.0"
-authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
+authors = [
+    "Tock Project Developers <tock-dev@googlegroups.com>",
+    "dcz <gihuac.dcz@porcupinefactory.org>",
+]
 license = "MIT/Apache-2.0"
 edition = "2021"
 repository = "https://www.github.com/tock/libtock-rs"
-description = "libtock low-level debug drivers"
+description = "libtock console driver"
 
 [dependencies]
 libtock_platform = { path = "../../platform" }
