--- a/panic_handlers/small_panic/Cargo.toml
+++ b/panic_handlers/small_panic/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0 OR MIT"
 repository = "https://www.github.com/tock/libtock-rs"
 
 [dependencies]
+libtock_console = { path = "../../apis/console" }
 libtock_low_level_debug = { path = "../../apis/low_level_debug" }
 libtock_platform = { path = "../../platform" }
 libtock_runtime = { path = "../../runtime" }
