--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://www.github.com/tock/libtock-rs"
 version = "0.1.0"
 
 [dependencies]
+libtock_alarm = { path = "apis/alarm" }
 libtock_buttons = { path = "apis/buttons" }
 libtock_console = { path = "apis/console" }
 libtock_debug_panic = { path = "panic_handlers/debug_panic" }
@@ -32,6 +33,7 @@ debug = true
 exclude = ["tock"]
 members = [
     "apis/gpio",
+    "apis/alarm",
     "apis/buttons",
     "apis/console",
     "apis/leds",
