--- a/libtock2/Cargo.toml
+++ b/libtock2/Cargo.toml
@@ -17,5 +17,6 @@ libtock_buttons = { path = "../apis/buttons" }
 libtock_console = { path = "../apis/console" }
 libtock_leds = { path = "../apis/leds" }
 libtock_low_level_debug = { path = "../apis/low_level_debug" }
+libtock_screen = { path = "../apis/screen" }
 
 libtock_debug_panic = { path = "../panic_handlers/debug_panic" }
